Fixes #9 #heroinput .twitter-typeahead not aligned properly.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -186,7 +186,7 @@ a:hover {
 }
 
 .twitter-typeahead {
-    display: inline-flex;
+    display: inline-flex !important;
 }
 
 #tipcontainer {
